--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.clarifai.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "face-api.js": "^0.22.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
+    "source-map-loader": "^5.0.0",
+    "sweetalert": "^2.1.2",
+    "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
