--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "proxy": "https://api.clarifai.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
